Updated Bengali translation

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -363,4 +363,48 @@
     <string name="btn_close">বন্ধ করুন</string>
     <string name="msg_ignore_case">Case উপেক্ষা করুন</string>
     <string name="msg_use_regex">regex ব্যবহার করুন</string>
+    <string name="idepref_buildnrun_summary">Gradle বিল্ড কনফিগার করুন।</string>
+    <string name="configure">কনফিগার করুন</string>
+    <string name="about">সম্বন্ধে</string>
+    <string name="idepref_github_summary">AndroidIDE হল ওপেন সোর্স!</string>
+    <string name="idepref_channel_summary">সাম্প্রতিক আপডেটের জন্য সাবস্ক্রাইব করুন।</string>
+    <string name="idepref_group_summary">এখানে বৈশিষ্ট্য, বাগ এবং উন্নতি নিয়ে আলোচনা করুন৷</string>
+    <string name="idepref_changelog_summary">এই সংস্করণে নতুন কি আছে?</string>
+    <string name="idepref_about_summary">AndroidIDE সম্পর্কে আরো কিছু।</string>
+    <string name="idepref_general_summary">সাধারণ IDE কনফিগারেশন।</string>
+    <string name="idepref_editor_summary">সম্পাদক কনফিগার করুন৷</string>
+    <string name="xml">XML</string>
+    <string name="idepref_xml_trimFinalNewLine_title">চূড়ান্ত নতুন লাইন বাদ দিন</string>
+    <string name="idepref_xml_insertFinalNewLine_title">চূড়ান্ত নতুন লাইন যোগ করুন</string>
+    <string name="idepref_xml_trimFinalNewLine_summary">ফাইলের শেষে অতিরিক্ত খালি লাইন সরান</string>
+    <string name="idepref_xml_insertFinalNewLine_summary">ফাইলের শেষে একটি খালি নতুন লাইন যোগ করুন</string>
+    <string name="idepref_xml_splitAttributes_title">অ্যট্রিবিউট গুলি আলাদা করুন</string>
+    <string name="idepref_xml_splitAttributes_summary">নতুন লাইনে অ্যাট্রিবিউট গুলি ফর্ম্যাট করুন</string>
+    <string name="idepref_xml_joinCDataLines_title">CDATA লাইনগুলি যোগ করুন</string>
+    <string name="idepref_xml_joinCDataLines_summary">CDTA-এর মধ্যের কোডকে স্বাভাবিক করুন৷</string>
+    <string name="idepref_xml_joinComment_title">Comment লাইনগুলি যোগ করুন</string>
+    <string name="idepref_xml_joinComment_summary">Comment-এর মধ্যের কোডকে স্বাভাবিক করুন৷</string>
+    <string name="idepref_xml_joinContent_title">Content লাইনগুলি যোগ করুন</string>
+    <string name="idepref_xml_joinContent_summary">Element-এর মধ্যের কোডকে স্বাভাবিক করুন৷</string>
+    <string name="idepref_xml_spaceBeforeEmptyClose_title">খালি ক্লোজ ট্যাগের আগে স্থান</string>
+    <string name="idepref_xml_spaceBeforeEmptyClose_summary">সেলফ ক্লোজিং ট্যাগ এন্ড ব্র্যাকেটের আগে হোয়াইটস্পেস যোগ করুন৷</string>
+    <string name="idepref_xml_preserveEmptyContent_title">খালি সামগ্রী সংরক্ষণ</string>
+    <string name="idepref_xml_preserveEmptyContent_summary">উপাদানের ভিতরে খালি সামগ্রী সংরক্ষণ করুন (হোয়াইটস্পেস, নতুন লাইন, ট্যাব, ইত্যাদি)।</string>
+    <string name="idepref_xml_preserveAttrLineBreaks_title">অ্যাট্রিবিউট লাইন বিরতি সংরক্ষণ</string>
+    <string name="idepref_xml_preserveAttrLineBreaks_summary">অ্যাট্রিবিউটের মধ্যে লাইন বিরতি সংরক্ষণ করুন।</string>
+    <string name="idepref_xml_closingBrackNewLine_title">নতুন লাইনে বন্ধনী বন্ধ</string>
+    <string name="idepref_xml_closingBrackNewLine_summary">একটি নতুন লাইনে বন্ধ বন্ধনী রাখুন৷</string>
+    <string name="idepref_xml_trimTrailingWs_title">ট্রেইলিং হোয়াইটস্পেস ট্রিম করুন</string>
+    <string name="idepref_xml_trimTrailingWs_summary">লাইনের শেষে অতিরিক্ত স্পেসগুলি সরান৷</string>
+    <string name="idepref_editor_formatterOptions">ফরম্যাটার অপশনগুলি</string>
+    <string name="idepref_maxLineWidth_title">সর্বোচ্চ লাইন প্রস্থ</string>
+    <string name="idepref_maxLineWidth_summary">একটি লাইনে সর্বাধিক যতগুলি অক্ষর থাকা উচিত৷</string>
+    <string name="idepref_splitAttrIndentSize_title">বিভক্ত অ্যাট্রিবিউট ইন্ডেন্ট সাইজ</string>
+    <string name="idepref_splitAttrIndentSize_summary">বিভক্ত অ্যাট্রিবিউট গুলির প্রথমে স্পেস-এর সংখ্যা৷</string>
+    <string name="idepref_preservedNewLines_title">লাইন সংরক্ষণ</string>
+    <string name="idepref_preservedNewLines_summary">সর্বোচ্চ সংখ্যক ক্রমাগত লাইন বিরতি যা সংরক্ষণ করা হবে৷</string>
+    <string name="idepref_emptyElements_title">খালি উপাদানের আচরণ</string>
+    <string name="idepref_emptyElements_summary">খালি উপাদানগুলির জন্য ফর্ম্যাটিং আচরণ চয়ন করুন৷</string>
+    <string name="xml_formatting_options">XML ফর্ম্যাটিং অপশনগুলি</string>
+    <string name="xml_formatting_options_summary">XML ফর্ম্যাটার কনফিগার করুন</string>
 </resources>
