--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -408,4 +408,6 @@
   <string name="idepref_emptyElements_summary">Choose the formatting behavior for empty elements.</string>
   <string name="xml_formatting_options">XML formatting options</string>
   <string name="xml_formatting_options_summary">Configure the XML formatter</string>
+  <string name="idepref_customFont_title">Use custom font</string>
+  <string name="idepref_customFont_summary">If enabled, the file at "/data/data/com.itsaky.androidide/files/home/.androidide/ui/font.ttf" will be used as Editor font.</string>
 </resources>
